--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,40 @@
-# Gmail Configuration for Email Notifications
-# Get app password from: https://myaccount.google.com/apppasswords
-GMAIL_EMAIL=your-email@gmail.com
-GMAIL_APP_PASSWORD=your-16-character-app-password
+# Production environment
+SECRET_KEY=
+DEBUG=False
+ALLOWED_HOSTS=example.com
+CSRF_TRUSTED_ORIGINS=https://example.com
+SITE_URL=https://example.com
 
-# Notification Settings
+# Database (Docker Postgres)
+DB_ENGINE=django.db.backends.postgresql
+DB_NAME=imptracker
+DB_USER=imptracker
+DB_PASSWORD=change-me
+DB_HOST=db
+DB_PORT=5432
+
+# pgAdmin
+PGADMIN_DEFAULT_EMAIL=
+PGADMIN_DEFAULT_PASSWORD=
+
+# Email (configure provider)
+EMAIL_HOST=
+EMAIL_PORT=587
+EMAIL_USE_TLS=True
+EMAIL_HOST_USER=
+EMAIL_HOST_PASSWORD=
+DEFAULT_FROM_EMAIL=
+
+# Notifications
 NOTIFICATIONS_ENABLED=True
 DUE_DATE_ALERT_DAYS=7
 SEND_TEST_EMAIL=False
 
-# Optional: Site URL for email links
-# SITE_URL=https://imptracker.example.com
+# Security toggles
+SECURE_SSL_REDIRECT=True
+SESSION_COOKIE_SECURE=True
+CSRF_COOKIE_SECURE=True
+
+# SSL / certbot
+CERTBOT_EMAIL=admin@example.com
+SERVER_NAME=example.com
