Fix Docker deployment issues and add production guide
- Add numpy<2.0 constraint to fix CPU compatibility issue
- Update docker-compose.yml to use environment variables for database config
- Fix nginx SSL configuration and add temporary HTTP-only config
- Fix seed_defaults.py permission collection logic
- Create missing config/wsgi.py and config/__init__.py
- Add comprehensive PRODUCTION_DEPLOYMENT.md guide
- Update .gitignore to exclude certbot/ directory (SSL certs shouldn't be in git)

--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -17,11 +17,11 @@ server {
 
 server {
     listen 443 ssl;
-    server_name example.com;
+    server_name imptracker.znphi.co.zm 10.51.75.85;
 
-    ssl_certificate /etc/letsencrypt/live/example.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/example.com/privkey.pem;
-    ssl_trusted_certificate /etc/letsencrypt/live/example.com/chain.pem;
+    ssl_certificate /etc/letsencrypt/live/imptracker.znphi.co.zm/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/imptracker.znphi.co.zm/privkey.pem;
+    ssl_trusted_certificate /etc/letsencrypt/live/imptracker.znphi.co.zm/chain.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
